<resources>
    <string name="app_name">AppComemax</string>
    <string name="iniciar">INICIAR</string>
    <string name="todo">TODO</string>
    <string name="logo">Logo</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
    <string name="a_n_no_tienes_cuenta_registrarse">¿¿Aún no tienes cuenta? Registrarse</string>
    <string name="contrasena">contrasena</string>
    <string name="Email" />
    <string name="Correo">Correo</string>
    <string name="Nombre">Nombre</string>
    <string name="Contraseña">Contraseña</string>
</resources>